# social_presence

./: .main.txt.un~  CREDIT_CARD_BILLING.md  Fei-Fei.md  Grafana  README.md  URGENT.md  ai_sorcery.md  anticipated_projects.md  anticipated_projects.txt  comp_bio.md  concepts.txt  deadlines.md  digest.md  do_or_dda.md  dream_companies.txt  hackathons.xlsx  job_desc.md  main.md  main.txt  main.txt~  neovim_bindings.md  neovim_bindings.txt  oreilly_courses  oreilly_courses.md  people.txt  preparations.md  render.yaml  strides.txt  things_to_catch_upon.txt  tools.md  tools.txt  ubuntu_stuff.md  virtual_environment_arch_linx.txt
.claude/: CLAUDE.md
.github/workflows/: deploy.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/middleware/: auth.py
backend/app/routers/: auth.py  files.py
backend/scripts/: ingest.py
frontend/: .env.example  components.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/content/[slug]/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/: content-viewer.tsx  editor.tsx  sidebar.tsx
frontend/src/lib/: api.ts  content.ts
